--- a/demo-version-control/Releasefile.yaml
+++ b/demo-version-control/Releasefile.yaml
@@ -1,6 +1,6 @@
 # Exported from:        https://ip-172-31-39-126.eu-west-3.compute.internal:5516/
 # Release version:      22.2.0
-# Date created:         Mon Sep 26 13:44:48 UTC 2022
+# Date created:         Mon Sep 26 13:48:00 UTC 2022
 
 ---
 apiVersion: xl-release/v1
@@ -14,6 +14,8 @@ spec:
   - phase: New Phase
     tasks:
     - name: task1
+      type: xlrelease.Task
+    - name: task2
       type: xlrelease.Task
   riskProfile: Default risk profile
 - notifications:
