--- a/demo-version-control/Releasefile.yaml
+++ b/demo-version-control/Releasefile.yaml
@@ -1,6 +1,6 @@
 # Exported from:        https://ip-172-31-39-126.eu-west-3.compute.internal:5516/
 # Release version:      22.2.0
-# Date created:         Tue Nov 15 14:20:59 UTC 2022
+# Date created:         Wed Nov 16 10:26:31 UTC 2022
 
 ---
 apiVersion: xl-release/v1
@@ -8,6 +8,17 @@ kind: Templates
 metadata:
   home: DemoVersionControl
 spec:
+- template: second template
+  scheduledStartDate: 2022-09-26T07:00:00Z
+  dueDate: 2022-09-26T08:00:00Z
+  phases:
+  - phase: New Phase
+    tasks:
+    - name: task1
+      type: xlrelease.Task
+    - name: hello world
+      type: xlrelease.ScriptTask
+  riskProfile: Default risk profile
 - template: template test
   scheduledStartDate: 2022-09-26T07:00:00Z
   dueDate: 2022-09-26T08:00:00Z
@@ -21,6 +32,11 @@ spec:
   riskProfile: Default risk profile
 - directory: HPROD
   children:
+  - template: Template hprod
+    scheduledStartDate: 2022-11-16T08:00:00Z
+    phases:
+    - phase: New Phase
+    riskProfile: Default risk profile
   - notifications:
     - notification: TASK_OVERDUE
       priority: High
